@@ -34,6 +34,23 @@ for each curve.
  
 </p>
 <p>
+
+
+<h4>BUG FIXES</h4>
+
+<p>
+
+</p>
+<p>
+<ul>
+<li> <code>betadisper()</code> failed when the <code>groups</code> was a
+factor with empty levels.
+</p>
+<p>
+</ul>
+
+</p>
+ 
 </p>
 <p>
 
